--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             </div>
         </section>
 
-        <section id="testimonios" class="mt-5">
-            <h2 class="px-5 py-4 my-4 pb-2 border-bottom fw-bold">Testimonios</h2>
+        <section id="testimonios" class="mt-5 container">
+            <h2 class="py-4 my-4 pb-2 border-bottom fw-bold">Testimonios</h2>
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner text-center">
                     <div class="carousel-item active">
@@ -210,15 +210,14 @@
         
     </main>
 
-    <footer>
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center pb-3 mb-3">
+            <li class="nav-item"><a href="https://github.com/Macfurly88/Macfurly88.github.io" target="_blank" class="nav-link px-2 text-body-secondary icon-foo"><i class="bi bi-github"></i></a></li>
+            <li class="nav-item"><a href="#" target="_blank" class="nav-link px-2 text-body-secondary icon-foo"><i class="bi bi-linkedin"></i></a></li>
+            <li class="nav-item"><a href="https://instagram.com/fakeprofile" target="_blank" class="nav-link px-2 text-body-secondary icon-foo"><i class="bi bi-instagram"></i></a></li>
+            <li class="nav-item"><a href="https://wa.me/1234567890" target="_blank" class="nav-link px-2 text-body-secondary icon-foo"><i class="bi bi-whatsapp"></i></a></li>
         </ul>
-        <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+        <p class="text-center">Proyecto desarrollado por naclary xiomara durante el bootcamp de <a href="https://tecnolochicas.mx/" target="_blank">Tecnolochicas PRO</a></p>
     </footer>
     <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
