--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="px-4 py-5 my-5 text-center">
                 <img class="d-block mx-auto mb-4 rounded-pill" src="imagenes/10.jpg" alt="" width="220" height="180" >
                 <h1 class="display-5 fw-bold text-body-emphasis">Maclary Xiomara Lopez Salazar</h1>
-                <h3 class="display-5 fw-bold text-body-emphasis">Desarrolladora Fronted Jr.</h3>
+                <h3 id="app"></h3>
                 <div class="col-lg-6 mx-auto">
                     <p class="lead mb-4">Hola, soy mexicana estudiante de Ingeniería en Sistemas Computacionales. 
                         Me apasiona la naturaleza, los animales, y disfruto de la música de géneros variados. 
@@ -219,6 +219,11 @@
         </ul>
         <p class="text-center">Proyecto desarrollado por naclary xiomara durante el bootcamp de <a href="https://tecnolochicas.mx/" target="_blank">Tecnolochicas PRO</a></p>
     </footer>
+
+    <!--typewriter-->
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <!--js local-->
+    <script src="main.js"></script>
     <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
