--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-    <!-- CDN Bootstrap -->
+    <!-- CDN Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Iconos Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--AOS-->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="style.css">
     <title>Conoceme</title>
@@ -37,7 +39,7 @@
 
         <section class="sobre-mi">
             <div class="px-4 py-5 my-5 text-center">
-                <img class="d-block mx-auto mb-4 rounded-pill" src="imagenes/10.jpg" alt="" width="220" height="180" >
+                <img class="d-block mx-auto mb-4 rounded-pill" src="imagenes/unapic.jpg" alt="" width="200" height="220" >
                 <h1 class="display-5 fw-bold text-body-emphasis">Maclary Xiomara Lopez Salazar</h1>
                 <h3 id="app"></h3>
                 <div class="col-lg-6 mx-auto">
@@ -56,25 +58,27 @@
 
         <section id="habilidades">
             <div class="container px-4 py-5" id="hanging-icons">
-                <h1 class="pb-2 border-bottom fw-bold">Habilidades</h1>
+                <h1 class="pb-2 fw-bold">Habilidades</h1>
                 <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-start" data-aos="fade-up" data-aos-duration="1000">
                         <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                            <i class="bi bi-laptop"></i>                        </div>
+                            <i class="bi bi-laptop"></i>                        
+                        </div>
                         <div>
                             <h3 class="fs-2 text-body-emphasis">Desarrollo web</h3>
                             <p class="lead">He creado distintos sitios web responsivos, aplicando conocimientos obtenidos en el bootcamp de Tecnolochicas PRO.</p>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-start" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
                         <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                            <i class="bi bi-file-earmark-code"></i>                        </div>
+                            <i class="bi bi-file-earmark-code"></i>                        
+                        </div>
                         <div>
                             <h3 class="fs-2 text-body-emphasis">Programación</h3>
                             <p class="lead">Tengo experiencia en lenguajes como Python, Java y C++. He desarrollado varias aplicaciones y proyectos utilizando estas tecnologías.</p>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-start" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
                         <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                             <i class="bi bi-palette"></i>                        
                         </div>
@@ -89,42 +93,42 @@
         
         <section id="proyectos">
             <div class="container px-4 py-5" id="custom-cards">
-                <h2 class="pb-2 border-bottom fw-bold">Proyectos</h2>
+                <h1 class="pb-2 fw-bold">Proyectos</h1>
                 <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-                    <div class="col">
+                    <div class="col" data-aos="flip-left" data-aos-duration="1000">
                         <div class="img-proyec1 card card-cover h-100 overflow-hidden text-bg-white rounded-4 shadow-lg">
                             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-info">Clon de Pinterest</h3>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
                                         <svg class="bi me-2" width="1.5em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-                                        <small class="text-info">Proyecto desarrolladocon HTML y CSS</small>
+                                        <small class="text-info fs-5">Proyecto desarrollado con HTML, CSS y JS</small>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col" data-aos="flip-left" data-aos-delay="200" data-aos-duration="1000">
                         <div class="img-proyec2 card card-cover h-100 overflow-hidden text-bg-white rounded-4 shadow-lg">
                             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-info">Invitacion XV años</h3>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
                                         <svg class="bi me-2" width="1.5em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-                                        <small class="text-info">Proyecto desarrolladocon HTML,CSS y PHP con conexion a una base de datos para contralar la asistencia y pases </small>
+                                        <small class="text-info fs-5">Proyecto desarrollado con HTML y CSS. Totalmente responsivo, con un contador y sonido. </small>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col" data-aos="flip-left" data-aos-delay="300" data-aos-duration="1000">
                         <div class="img-proyec3 card card-cover h-100 overflow-hidden text-bg-white rounded-4 shadow-lg">
                             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-info">Juego retro</h3>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
                                         <svg class="bi me-2" width="1.5em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-                                        <small class="text-info">Proyecto desarrolladocon Python</small>
+                                        <small class="p-4 text-info fs-5">Proyecto desarrollado con Python, donde simula un juego de golf estilo retro, con musica y menu de juego.</small>
                                     </li>
                                 </ul>
                             </div>
@@ -136,7 +140,7 @@
         </section>
 
         <section id="testimonios" class="mt-5 container">
-            <h2 class="py-4 my-4 pb-2 border-bottom fw-bold">Testimonios</h2>
+            <h1 class="py-4 my-4 pb-2 fw-bold">Testimonios</h1>
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner text-center">
                     <div class="carousel-item active">
@@ -193,15 +197,12 @@
                     <p class="lead col-lg-8 mx-auto fs-5 text-dark fw-bold">
                         Puedes contactarme por WhatsApp o seguirme en mis redes sociales para más actualizaciones y ejemplos de mi trabajo.
                     </p>
-                    <div class="d-inline-flex gap-2 mb-5">
-                        <a href="https://facebook.com/fakeprofile" class="btn btn-outline-info btn-lg px-4 fw-bold border-3 rounded-pill text-primary" target="_blank">
-                            Facebook
-                        </a>
-                        <a href="https://wa.me/1234567890" class="btn btn-outline-info btn-lg px-4 fw-bold border-3 rounded-pill text-success" target="_blank">
-                            WhatsApp
-                        </a>
-                        <a href="https://instagram.com/fakeprofile" class="btn btn-outline-info btn-lg px-4 fw-bold border-3 rounded-pill text-danger" target="_blank">
+                    <div class="d-inline-flex gap-4 mb-5">
+                        <a href="https://www.instagram.com/mac.designs88?igsh=djg5Yjd4Z3Nkb2k2" class="btn btn-outline-info btn-lg px-4 fw-bold border-3 rounded-pill text-danger" target="_blank">
                             Instagram
+                        </a>
+                        <a href="https://wa.me/1234567890" class="btn btn-outline-info btn-lg px-4 fw-bold border-3 rounded-pill text-success" target="_blank" >
+                            WhatsApp
                         </a>
                     </div>
                 </div>
@@ -212,12 +213,10 @@
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center pb-3 mb-3">
-            <li class="nav-item"><a href="https://github.com/Macfurly88/Macfurly88.github.io" target="_blank" class="nav-link px-2 text-body-secondary icon-foo"><i class="bi bi-github"></i></a></li>
-            <li class="nav-item"><a href="#" target="_blank" class="nav-link px-2 text-body-secondary icon-foo"><i class="bi bi-linkedin"></i></a></li>
-            <li class="nav-item"><a href="https://instagram.com/fakeprofile" target="_blank" class="nav-link px-2 text-body-secondary icon-foo"><i class="bi bi-instagram"></i></a></li>
-            <li class="nav-item"><a href="https://wa.me/1234567890" target="_blank" class="nav-link px-2 text-body-secondary icon-foo"><i class="bi bi-whatsapp"></i></a></li>
+            <li class="nav-item"><a href="https://github.com/Macfurly88" target="_blank" class="nav-link px-2 text-body-secondary icon-foo"><i class="bi bi-github"></i></a></li>
+            <li class="nav-item"><a href="https://www.linkedin.com/in/maclary-lopez-1419a7321/" target="_blank" class="nav-link px-2 text-body-secondary icon-foo"><i class="bi bi-linkedin"></i></a></li>
         </ul>
-        <p class="text-center">Proyecto desarrollado por naclary xiomara durante el bootcamp de <a href="https://tecnolochicas.mx/" target="_blank">Tecnolochicas PRO</a></p>
+        <p class="text-center">Proyecto desarrollado por Maclary xiomara durante el bootcamp de <a href="https://tecnolochicas.mx/" target="_blank">Tecnolochicas PRO</a></p>
     </footer>
 
     <!--typewriter-->
@@ -226,5 +225,10 @@
     <script src="main.js"></script>
     <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!--AOS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
